# rustfm-scrobble

./: AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  check.yml
src/: auth.rs  client.rs  lib.rs  models.rs  scrobbler.rs
