[package]
name = "rustfm-scrobble"
version = "1.1.1"
authors = ["David Futcher <david@futcher.io>", "Tox <toxtek@proton.me>"]
description = "Last.fm Scrobble crate for Rust"
repository = "https://github.com/toxikuu/rustfm-scrobble"
keywords = ["lastfm", "last-fm", "scrobble", "api"]
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "multimedia"]
edition = "2024"

[dependencies]
ureq = "^3"
md5 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockito = "0.32" # TODO: Bump to ^1
